# lagKAN

./: LICENSE  README.md  pyproject.toml
examples/: run_lagkan.ipynb
lagkan/: __init__.py  inference.py
